# django-oscar-zarinpal-gateway

./: .gitignore  README.md  README.rst  README_RELEASE.rst  requirements.txt  settings.py
checkout/: admin.py  apps.py  bridge.py  decorators.py  forms.py  gateway.py  models.py  views.py
checkout/migrations/: 0001_initial.py  0003_rename_amount_zarrinpaytransaction_total_incl_tax.py  0006_auto_20220309_1852.py  0008_auto_20220311_1248.py
checkout/templates/checkout/: call_back_result.html  payment_details.html  payment_method.html
code/: LICENSE  MANIFEST.in  README.rst  setup.cfg
code/django_oscar_zarinpal_gateway/: settings.py
code/django_oscar_zarinpal_gateway/checkout/: __init__.py  apps.py  bridge.py  gateway.py  models.py
code/django_oscar_zarinpal_gateway/checkout/migrations/: 0002_rename_total_incl_tax_zarrinpaytransaction_amount.py  0004_auto_20220309_1703.py  0005_alter_zarrinpaytransaction_pay_type.py  0007_auto_20220309_1901.py  0009_alter_zarrinpaytransaction_shipping_address.py  0010_alter_zarrinpaytransaction_shipping_address.py  0011_alter_zarrinpaytransaction_shipping_address.py  0012_remove_zarrinpaytransaction_shipping_address.py  0013_auto_20220312_0537.py  0014_zarrinpaytransaction_shipping_address.py
code/django_oscar_zarinpal_gateway/checkout/templates/checkout/: preview.html
