[metadata]
name = django_oscar_zarinpal_gateway
version = 0.1
description =  Payment integration with Zarinpal for django-oscar 
long_description = file: README.rst
url = https://github.com/mojtabaakbari221b/django-oscar-zarinpal-gateway
author = Mojtaba Akbari
author_email = mojtaba.akbari.221B@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.12
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
	suds==1.0.0
	django-oscar==3.1
	Django >= 3.2
          
          
