[metadata]
name = django_oscar_zarinpal_gateway
version = 0.12
description =  Payment integration with Zarinpal for django-oscar 
long_description = check https://github.com/mojtabaakbari221b/django-oscar-zarinpal-gateway
url = https://github.com/mojtabaakbari221b/django-oscar-zarinpal-gateway
author = Mojtaba Akbari
author_email = mojtaba.akbari.221B@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
	suds==1.0.0
	django-oscar==3.1
	Django>=3.2
          
          
